testsuite/poke.pkl/field-init-diag-7.pk
/* { dg-do compile } */

type Foo
  = struct
    {
      int : a == 20 == 10; /* { dg-error "" } */
    };
